manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: videopong
  namespace: videopong
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: videopong
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-ws
  namespace: videopong
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8080
      targetPort: 8080
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 8080
