manifests/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: videopong
  namespace: videopong
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`videopong.henriksen.cloud`)
      services:
        - name: videopong
          port: 80
    - kind: Rule
      match: Host(`mqtt.henriksen.cloud`)
      services:
        - name: mosquitto
          port: 8080
  tls:
    certResolver: myresolver
